--- a/.github/workflows/command-backport.yml
+++ b/.github/workflows/command-backport.yml
@@ -69,14 +69,17 @@ jobs:
           app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
           private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
 
+      - name: Config git
+        run: |
+          git config --global user.name "ParityReleasesBackportApp"
+          git config --global user.email "release-team@parity.io"
+
       - name: Create backport pull requests
         id: create_backports
         env:
           GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
           BACKPORT_BRANCHES: ${{ steps.branches.outputs.BACKPORT_BRANCHES }}
         run: |
-          gh auth login --with-token <<< $GITHUB_TOKEN
-
           for branch in $BACKPORT_BRANCHES; do
             echo "Creating backport for branch: $branch"
 
@@ -91,6 +94,8 @@ jobs:
               git add .
               git commit -m "BACKPORT-CONFLICT: Resolve conflicts for backport #${{ github.event.pull_request.number }}"
             }
+
+            gh auth setup-git
 
             git push origin $BACKPORT_BRANCH
 
