--- a/cumulus/zombienet/zombienet-sdk-helpers/Cargo.toml
+++ b/cumulus/zombienet/zombienet-sdk-helpers/Cargo.toml
@@ -16,5 +16,5 @@ serde = { workspace = true }
 serde_json = { workspace = true }
 subxt = { workspace = true, features = ["native"] }
 subxt-signer = { workspace = true }
-tokio = { workspace = true, features = ["rt-multi-thread", "macros"] }
+tokio = { workspace = true, features = ["rt-multi-thread", "macros", "time"] }
 
