try with another token generation action

--- a/.github/workflows/command-backport.yml
+++ b/.github/workflows/command-backport.yml
@@ -62,62 +62,53 @@ jobs:
           BACKPORT_BRANCHES=$(parse_branch_names_from_backport_labels "$LABELS")
           echo "BACKPORT_BRANCHES=${BACKPORT_BRANCHES}" >> $GITHUB_OUTPUT
 
+      # - name: Generate token
+      #   id: generate_token
+      #   uses: actions/create-github-app-token@v1
+      #   with:
+      #     app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
+      #     private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
+
       - name: Generate token
         id: generate_token
-        uses: actions/create-github-app-token@v1
+        uses: tibdex/github-app-token@v2.1.0
         with:
-          app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
-          private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
-
-      - name: Config git
-        run: |
-          git config --global user.name "ParityReleasesBackportApp"
-          git config --global user.email "release-team@parity.io"
+          app_id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
+          private_key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
+          permissions: >-
+            {"Workflows": "write"}
 
       - name: Create backport pull requests
-        id: create_backports
-        env:
-          GITHUB_TOKEN: ${{ steps.generate_token.outputs.token }}
-          BACKPORT_BRANCHES: ${{ steps.branches.outputs.BACKPORT_BRANCHES }}
-        run: |
-          for branch in $BACKPORT_BRANCHES; do
-            echo "Creating backport for branch: $branch"
+        uses: korthout/backport-action@v3
+        id: backport
+        with:
+          target_branches: ${{ steps.branches.outputs.BACKPORT_BRANCHES }}
+          merge_commits: skip
+          github_token: ${{ steps.generate_token.outputs.token }}
+          pull_description: |
+            Backport #${pull_number} into `${target_branch}` from ${pull_author}.
 
-            # Create a new branch for the backport
-            BACKPORT_BRANCH="backport-${{ github.event.pull_request.number }}-to-${branch}"
-            git fetch origin $branch
-            git checkout -b $BACKPORT_BRANCH origin/$branch
+            See the [documentation](https://github.com/paritytech/polkadot-sdk/blob/master/docs/BACKPORT.md) on how to use this bot.
 
-            # Cherry-pick the merged commit
-            git cherry-pick -x ${{ github.event.pull_request.merge_commit_sha }} || {
-              echo "Conflict detected. Creating draft PR for manual resolution."
-              git add .
-              git commit -m "BACKPORT-CONFLICT: Resolve conflicts for backport #${{ github.event.pull_request.number }}"
+            <!--
+              # To be used by other automation, do not modify:
+              original-pr-number: #${pull_number}
+            -->
+          pull_title: |
+            [${target_branch}] Backport #${pull_number}
+          experimental: >
+            {
+              "conflict_resolution": "draft_commit_conflicts"
             }
-
-            gh auth setup-git
-
-            git push origin $BACKPORT_BRANCH
-
-            gh pr create \
-              --base $branch \
-              --head $BACKPORT_BRANCH \
-              --title "[${branch}] Backport #${{ github.event.pull_request.number }}" \
-              --body "Backport #${{ github.event.pull_request.number}} into \`${branch}\` from ${{ github.event.pull_request.user.login }}. 
-                      See the [documentation](https://github.com/paritytech/polkadot-sdk/blob/master/docs/BACKPORT.md) on how to use this bot.
-                    <!--
-                      # To be used by other automation, do not modify:
-                      original-pr-number: #${{ github.event.pull_request.number }}
-                    -->"
-
-          done
+          copy_assignees: true
+          label_pattern: ^A4-backport-stable
 
       - name: Label Backports
-        if: ${{ steps.create_backports.conclusion == 'success' }}
+        if: ${{ steps.backport.outputs.created_pull_numbers != '' }}
         uses: actions/github-script@v7
         with:
           script: |
-            const pullNumbers = '${{ steps.create_backports.outputs.created_pull_numbers }}'.split(' ');
+            const pullNumbers = '${{ steps.backport.outputs.created_pull_numbers }}'.split(' ');
 
             for (const pullNumber of pullNumbers) {
               await github.rest.issues.addLabels({
@@ -130,11 +121,11 @@ jobs:
             }
 
       - name: Request Review
-        if: ${{ steps.create_backports.conclusion == 'success' }}
+        if: ${{ steps.backport.outputs.created_pull_numbers != '' }}
         uses: actions/github-script@v7
         with:
           script: |
-            const pullNumbers = '${{ steps.create_backports.outputs.created_pull_numbers }}'.split(' ');
+            const pullNumbers = '${{ steps.backport.outputs.created_pull_numbers }}'.split(' ');
             const reviewer = '${{ github.event.pull_request.user.login }}';
 
             for (const pullNumber of pullNumbers) {
