--- a/.github/workflows/command-backport.yml
+++ b/.github/workflows/command-backport.yml
@@ -76,7 +76,7 @@ jobs:
           app_id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
           private_key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
           permissions: >-
-            {"Workflows": "write"}
+            {"workflows": "write"}
 
       - name: Create backport pull requests
         uses: korthout/backport-action@v3
