--- a/bridges/chains/chain-asset-hub-westend/Cargo.toml
+++ b/bridges/chains/chain-asset-hub-westend/Cargo.toml
@@ -19,11 +19,17 @@ scale-info = { features = ["derive"], workspace = true }
 
 # Substrate Dependencies
 frame-support = { workspace = true }
+sp-api = { workspace = true }
 sp-core = { workspace = true }
+sp-runtime = { workspace = true }
+sp-std = { workspace = true }
 
 # Bridge Dependencies
-bp-xcm-bridge-hub-router = { workspace = true }
-testnet-parachains-constants = { features = ["westend"], workspace = true }
+bp-bridge-hub-cumulus = { workspace = true }
+bp-messages = { workspace = true }
+bp-runtime = { workspace = true }
+bp-xcm-bridge = { workspace = true }
+bp-xcm-bridge-router = { workspace = true }
 
 # Polkadot dependencies
 xcm = { workspace = true }
@@ -31,11 +37,19 @@ xcm = { workspace = true }
 [features]
 default = ["std"]
 std = [
-	"bp-xcm-bridge-hub-router/std",
+	"bp-bridge-hub-cumulus/std",
+	"bp-messages/std",
+	"bp-runtime/std",
+	"bp-xcm-bridge-router/std",
+	"bp-xcm-bridge/std",
+	"codec/std",
 	"codec/std",
 	"frame-support/std",
+	"frame-support/std",
 	"scale-info/std",
+	"sp-api/std",
 	"sp-core/std",
-	"testnet-parachains-constants/std",
+	"sp-runtime/std",
+	"sp-std/std",
 	"xcm/std",
 ]
