--- a/substrate/frame/beefy/Cargo.toml
+++ b/substrate/frame/beefy/Cargo.toml
@@ -26,16 +26,17 @@ sp-session.workspace = true
 sp-staking = { features = ["serde"], workspace = true }
 
 [dev-dependencies]
-frame-election-provider-support = { workspace = true, default-features = true }
-pallet-balances = { workspace = true, default-features = true }
-pallet-offences = { workspace = true, default-features = true }
-pallet-staking = { workspace = true, default-features = true }
-pallet-staking-reward-curve = { workspace = true, default-features = true }
-pallet-timestamp = { workspace = true, default-features = true }
-sp-core = { workspace = true, default-features = true }
-sp-io = { workspace = true, default-features = true }
-sp-staking = { workspace = true, default-features = true }
-sp-state-machine = { workspace = true }
+frame-election-provider-support = { default-features = true, path = "../election-provider-support" }
+pallet-balances = { default-features = true, path = "../balances" }
+pallet-offences = { default-features = true, path = "../offences" }
+pallet-staking = { default-features = true, path = "../staking" }
+pallet-staking-reward-curve = { default-features = true, path = "../staking/reward-curve" }
+pallet-timestamp = { default-features = true, path = "../timestamp" }
+sp-core = { default-features = true, path = "../../primitives/core" }
+sp-io = { default-features = true, path = "../../primitives/io" }
+sp-staking = { default-features = true, path = "../../primitives/staking" }
+sp-state-machine = { path = "../../primitives/state-machine", default-features = false }
+sp-tracing = { default-features = true, path = "../../primitives/tracing" }
 
 [features]
 default = ["std"]
