--- a/substrate/frame/election-provider-support/Cargo.toml
+++ b/substrate/frame/election-provider-support/Cargo.toml
@@ -21,10 +21,10 @@ frame-election-provider-solution-type.default-features = true
 frame-support.workspace = true
 frame-system.workspace = true
 scale-info = { features = ["derive"], workspace = true }
-sp-arithmetic = { workspace = true }
-sp-core = { workspace = true }
-sp-npos-elections = { workspace = true }
-sp-runtime = { workspace = true }
+sp-arithmetic.workspace = true
+sp-core.workspace = true
+sp-npos-elections.workspace = true
+sp-runtime.workspace = true
 
 [dev-dependencies]
 rand = { features = ["small_rng"], workspace = true, default-features = true }
