--- a/.github/workflows/command-backport.yml
+++ b/.github/workflows/command-backport.yml
@@ -18,8 +18,8 @@ jobs:
     env:
       GH_TOKEN: ${{ github.token }}
     outputs:
-      LABELS: ${{ steps.check_labels.outputs.LABELS}}
-      found: ${{ steps.check_labels.outputs.found}}
+      LABELS: ${{ steps.check_labels.outputs.LABELS }}
+      found: ${{ steps.check_labels.outputs.found }}
 
     # The 'github.event.pull_request.merged' ensures that it got into master:
     if: >
@@ -45,14 +45,24 @@ jobs:
             echo "found=false" >> $GITHUB_OUTPUT
           fi
 
-
   backport:
     name: Backport pull request
     runs-on: ubuntu-latest
-    needs: [ check-labels ]
-    if: ${{ needs.check-labels.outputs.found  == 'true' }}
+    needs: [check-labels]
+    if: ${{ needs.check-labels.outputs.found == 'true' }}
     steps:
-      - uses: actions/checkout@v4
+
+      - name: Generate token
+        id: generate_token
+        uses: actions/create-github-app-token@v1
+        with:
+          app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
+          private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
+
+      - name: Checkout sources
+        uses: actions/checkout@v4
+        with:
+          token: ${{ steps.generate_token.outputs.token }}
 
       - name: Get branches to backport to
         id: branches
@@ -63,12 +73,6 @@ jobs:
           BACKPORT_BRANCHES=$(parse_branch_names_from_backport_labels "$LABELS")
           echo "BACKPORT_BRANCHES=${BACKPORT_BRANCHES}" >> $GITHUB_OUTPUT
 
-      - name: Generate token
-        id: generate_token
-        uses: actions/create-github-app-token@v1
-        with:
-          app-id: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_ID }}
-          private-key: ${{ secrets.RELEASE_BACKPORT_AUTOMATION_APP_PRIVATE_KEY }}
 
       - name: Create backport pull requests
         uses: korthout/backport-action@v3
