--- a/cumulus/parachains/integration-tests/emulated/chains/parachains/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/chains/parachains/assets/asset-hub-westend/Cargo.toml
@@ -24,3 +24,4 @@ westend-emulated-chain = { workspace = true, default-features = true }
 xcm.workspace = true
 xcm-builder = { workspace = true, default-features = true }
 bp-bridge-hub-westend.workspace = true
+snowbridge-inbound-queue-primitives.workspace = true
