--- a/Cargo.toml
+++ b/Cargo.toml
@@ -1255,49 +1255,31 @@ slotmap = { version = "1.0" }
 smallvec = { version = "1.11.0", default-features = false }
 smoldot = { version = "0.11.0", default-features = false }
 smoldot-light = { version = "0.9.0", default-features = false }
-<<<<<<< HEAD
 snowbridge-beacon-primitives = { path = "bridges/snowbridge/primitives/beacon", default-features = false, version = "0.13.0-rc1" }
 snowbridge-core = { path = "bridges/snowbridge/primitives/core", default-features = false, version = "0.13.0-rc1" }
 snowbridge-ethereum = { path = "bridges/snowbridge/primitives/ethereum", default-features = false, version = "0.11.0" }
-snowbridge-outbound-queue-merkle-tree = { path = "bridges/snowbridge/pallets/outbound-queue/merkle-tree", default-features = false, version = "0.10.0" }
+snowbridge-inbound-queue-primitives = { path = "bridges/snowbridge/primitives/inbound-queue", default-features = false, version = "0.9.0" }
+snowbridge-merkle-tree = { path = "bridges/snowbridge/primitives/merkle-tree", default-features = false, version = "0.2.0" }
+snowbridge-outbound-queue-primitives = { path = "bridges/snowbridge/primitives/outbound-queue", default-features = false, version = "0.2.0" }
 snowbridge-outbound-queue-runtime-api = { path = "bridges/snowbridge/pallets/outbound-queue/runtime-api", default-features = false, version = "0.13.0-rc1" }
+snowbridge-outbound-queue-v2-runtime-api = { path = "bridges/snowbridge/pallets/outbound-queue-v2/runtime-api", default-features = false, version = "0.2.0" }
 snowbridge-pallet-ethereum-client = { path = "bridges/snowbridge/pallets/ethereum-client", default-features = false, version = "0.13.0-rc1" }
 snowbridge-pallet-ethereum-client-fixtures = { path = "bridges/snowbridge/pallets/ethereum-client/fixtures", default-features = false, version = "0.21.0-rc1" }
 snowbridge-pallet-inbound-queue = { path = "bridges/snowbridge/pallets/inbound-queue", default-features = false, version = "0.13.0-rc1" }
 snowbridge-pallet-inbound-queue-fixtures = { path = "bridges/snowbridge/pallets/inbound-queue/fixtures", default-features = false, version = "0.21.0-rc1" }
+snowbridge-pallet-inbound-queue-v2 = { path = "bridges/snowbridge/pallets/inbound-queue-v2", default-features = false, version = "0.2.0" }
+snowbridge-pallet-inbound-queue-v2-fixtures = { path = "bridges/snowbridge/pallets/inbound-queue-v2/fixtures", default-features = false, version = "0.10.0" }
 snowbridge-pallet-outbound-queue = { path = "bridges/snowbridge/pallets/outbound-queue", default-features = false, version = "0.13.0-rc1" }
+snowbridge-pallet-outbound-queue-v2 = { path = "bridges/snowbridge/pallets/outbound-queue-v2", default-features = false, version = "0.2.0" }
 snowbridge-pallet-system = { path = "bridges/snowbridge/pallets/system", default-features = false, version = "0.13.0-rc1" }
-snowbridge-router-primitives = { path = "bridges/snowbridge/primitives/router", default-features = false, version = "0.19.0-rc1" }
-snowbridge-runtime-common = { path = "bridges/snowbridge/runtime/runtime-common", default-features = false, version = "0.13.0-rc1" }
-snowbridge-runtime-test-common = { path = "bridges/snowbridge/runtime/test-common", default-features = false }
+snowbridge-pallet-system-frontend = { path = "bridges/snowbridge/pallets/system-frontend", default-features = false, version = "0.2.0" }
+snowbridge-pallet-system-v2 = { path = "bridges/snowbridge/pallets/system-v2", default-features = false, version = "0.2.0" }
+snowbridge-runtime-common = { path = "bridges/snowbridge/runtime/runtime-common", default-features = false, version = "0.2.0" }
+snowbridge-runtime-test-common = { path = "bridges/snowbridge/runtime/test-common", default-features = false, version = "0.15.0-rc1" }
 snowbridge-system-runtime-api = { path = "bridges/snowbridge/pallets/system/runtime-api", default-features = false, version = "0.13.0-rc1" }
-=======
-snowbridge-beacon-primitives = { path = "bridges/snowbridge/primitives/beacon", default-features = false }
-snowbridge-core = { path = "bridges/snowbridge/primitives/core", default-features = false }
-snowbridge-ethereum = { path = "bridges/snowbridge/primitives/ethereum", default-features = false }
-snowbridge-inbound-queue-primitives = { path = "bridges/snowbridge/primitives/inbound-queue", default-features = false }
-snowbridge-merkle-tree = { path = "bridges/snowbridge/primitives/merkle-tree", default-features = false }
-snowbridge-outbound-queue-primitives = { path = "bridges/snowbridge/primitives/outbound-queue", default-features = false }
-snowbridge-outbound-queue-runtime-api = { path = "bridges/snowbridge/pallets/outbound-queue/runtime-api", default-features = false }
-snowbridge-outbound-queue-v2-runtime-api = { path = "bridges/snowbridge/pallets/outbound-queue-v2/runtime-api", default-features = false }
-snowbridge-pallet-ethereum-client = { path = "bridges/snowbridge/pallets/ethereum-client", default-features = false }
-snowbridge-pallet-ethereum-client-fixtures = { path = "bridges/snowbridge/pallets/ethereum-client/fixtures", default-features = false }
-snowbridge-pallet-inbound-queue = { path = "bridges/snowbridge/pallets/inbound-queue", default-features = false }
-snowbridge-pallet-inbound-queue-fixtures = { path = "bridges/snowbridge/pallets/inbound-queue/fixtures", default-features = false }
-snowbridge-pallet-inbound-queue-v2 = { path = "bridges/snowbridge/pallets/inbound-queue-v2", default-features = false }
-snowbridge-pallet-inbound-queue-v2-fixtures = { path = "bridges/snowbridge/pallets/inbound-queue-v2/fixtures", default-features = false }
-snowbridge-pallet-outbound-queue = { path = "bridges/snowbridge/pallets/outbound-queue", default-features = false }
-snowbridge-pallet-outbound-queue-v2 = { path = "bridges/snowbridge/pallets/outbound-queue-v2", default-features = false }
-snowbridge-pallet-system = { path = "bridges/snowbridge/pallets/system", default-features = false }
-snowbridge-pallet-system-frontend = { path = "bridges/snowbridge/pallets/system-frontend", default-features = false }
-snowbridge-pallet-system-v2 = { path = "bridges/snowbridge/pallets/system-v2", default-features = false }
-snowbridge-runtime-common = { path = "bridges/snowbridge/runtime/runtime-common", default-features = false }
-snowbridge-runtime-test-common = { path = "bridges/snowbridge/runtime/test-common", default-features = false }
-snowbridge-system-runtime-api = { path = "bridges/snowbridge/pallets/system/runtime-api", default-features = false }
-snowbridge-system-v2-runtime-api = { path = "bridges/snowbridge/pallets/system-v2/runtime-api", default-features = false }
-snowbridge-test-utils = { path = "bridges/snowbridge/test-utils" }
-snowbridge-verification-primitives = { path = "bridges/snowbridge/primitives/verification", default-features = false }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
+snowbridge-system-v2-runtime-api = { path = "bridges/snowbridge/pallets/system-v2/runtime-api", default-features = false, version = "0.2.0" }
+snowbridge-test-utils = { path = "bridges/snowbridge/test-utils", version = "0.1.0" }
+snowbridge-verification-primitives = { path = "bridges/snowbridge/primitives/verification", default-features = false, version = "0.2.0" }
 soketto = { version = "0.8.0" }
 solochain-template-runtime = { path = "templates/solochain/runtime", version = "0.1.0" }
 sp-api = { path = "substrate/primitives/api", default-features = false, version = "36.0.0-rc1" }
