--- a/bridges/snowbridge/pallets/ethereum-client/fixtures/Cargo.toml
+++ b/bridges/snowbridge/pallets/ethereum-client/fixtures/Cargo.toml
@@ -19,18 +19,11 @@ exclude-from-umbrella = true
 
 [dependencies]
 hex-literal = { workspace = true, default-features = true }
-<<<<<<< HEAD
 snowbridge-beacon-primitives.workspace = true
 snowbridge-core.workspace = true
+snowbridge-inbound-queue-primitives.workspace = true
 sp-core.workspace = true
 sp-std.workspace = true
-=======
-snowbridge-beacon-primitives = { workspace = true }
-snowbridge-core = { workspace = true }
-snowbridge-inbound-queue-primitives = { workspace = true }
-sp-core = { workspace = true }
-sp-std = { workspace = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
 
 [features]
 default = ["std"]
