--- a/bridges/snowbridge/pallets/system/Cargo.toml
+++ b/bridges/snowbridge/pallets/system/Cargo.toml
@@ -24,7 +24,6 @@ frame-support.workspace = true
 frame-system.workspace = true
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
-<<<<<<< HEAD
 sp-core.workspace = true
 sp-io.workspace = true
 sp-runtime.workspace = true
@@ -32,19 +31,7 @@ sp-std.workspace = true
 xcm.workspace = true
 xcm-executor.workspace = true
 snowbridge-core.workspace = true
-=======
-
-sp-core = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-sp-std = { workspace = true }
-
-xcm = { workspace = true }
-xcm-executor = { workspace = true }
-
-snowbridge-core = { workspace = true }
-snowbridge-outbound-queue-primitives = { workspace = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
+snowbridge-outbound-queue-primitives.workspace = true
 
 [dev-dependencies]
 hex = { workspace = true, default-features = true }
