--- a/bridges/snowbridge/primitives/core/Cargo.toml
+++ b/bridges/snowbridge/primitives/core/Cargo.toml
@@ -20,10 +20,10 @@ hex-literal = { workspace = true, default-features = true }
 log = { workspace = true }
 scale-info = { features = ["derive"], workspace = true }
 serde = { optional = true, features = ["alloc", "derive"], workspace = true }
-<<<<<<< HEAD
 polkadot-parachain-primitives.workspace = true
 xcm.workspace = true
 xcm-builder.workspace = true
+xcm-executor.workspace = true
 frame-support.workspace = true
 frame-system.workspace = true
 sp-arithmetic.workspace = true
@@ -32,33 +32,11 @@ sp-io.workspace = true
 sp-runtime.workspace = true
 sp-std.workspace = true
 snowbridge-beacon-primitives.workspace = true
-
-ethabi = { workspace = true }
-
-[dev-dependencies]
-hex = { workspace = true, default-features = true }
-xcm-executor = { default-features = true, path = "../../../../polkadot/xcm/xcm-executor", package = "staging-xcm-executor" }
-=======
-
-polkadot-parachain-primitives = { workspace = true }
-xcm = { workspace = true }
-xcm-builder = { workspace = true }
-
-ethabi = { workspace = true }
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-sp-arithmetic = { workspace = true }
-sp-core = { workspace = true }
-sp-io = { workspace = true }
-sp-runtime = { workspace = true }
-sp-std = { workspace = true }
-xcm-executor = { workspace = true }
-
 bp-relayers = { workspace = true }
+ethabi = { workspace = true }
 
 [dev-dependencies]
 hex = { workspace = true, default-features = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
 
 [features]
 default = ["std"]
