--- a/bridges/snowbridge/runtime/runtime-common/Cargo.toml
+++ b/bridges/snowbridge/runtime/runtime-common/Cargo.toml
@@ -16,28 +16,18 @@ exclude-from-umbrella = true
 
 [dependencies]
 codec = { workspace = true }
-<<<<<<< HEAD
 frame-support.workspace = true
+frame-system.workspace = true
 log = { workspace = true }
+pallet-xcm.workspace = true
 sp-arithmetic.workspace = true
 sp-std.workspace = true
 xcm.workspace = true
 xcm-builder.workspace = true
 xcm-executor.workspace = true
 snowbridge-core.workspace = true
-=======
-frame-support = { workspace = true }
-frame-system = { workspace = true }
-log = { workspace = true }
-pallet-xcm = { workspace = true }
-snowbridge-core = { workspace = true }
-snowbridge-outbound-queue-primitives = { workspace = true }
-sp-arithmetic = { workspace = true }
-sp-std = { workspace = true }
-xcm = { workspace = true }
-xcm-builder = { workspace = true }
-xcm-executor = { workspace = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
+snowbridge-outbound-queue-primitives.workspace = true
+
 
 [dev-dependencies]
 
