--- a/cumulus/parachains/integration-tests/emulated/chains/parachains/bridges/bridge-hub-westend/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/chains/parachains/bridges/bridge-hub-westend/Cargo.toml
@@ -11,36 +11,16 @@ publish = false
 workspace = true
 
 [dependencies]
-<<<<<<< HEAD
 frame-support.workspace = true
 sp-core.workspace = true
 sp-keyring.workspace = true
 xcm.workspace = true
 bp-messages.workspace = true
+pallet-bridge-relayers.workspace = true
 bridge-hub-common.workspace = true
 bridge-hub-westend-runtime.workspace = true
 bridge-hub-westend-runtime.default-features = true
 emulated-integration-tests-common.workspace = true
 parachains-common.workspace = true
 parachains-common.default-features = true
-=======
-
-# Substrate
-frame-support = { workspace = true }
-sp-core = { workspace = true }
-sp-keyring = { workspace = true }
-
-# Polkadot Dependencies
-xcm = { workspace = true }
-
-# Bridge dependencies
-bp-messages = { workspace = true }
-pallet-bridge-relayers = { workspace = true }
-
-# Cumulus
-bridge-hub-common = { workspace = true }
-bridge-hub-westend-runtime = { workspace = true, default-features = true }
-emulated-integration-tests-common = { workspace = true }
-parachains-common = { workspace = true, default-features = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
 testnet-parachains-constants = { features = ["westend"], workspace = true, default-features = true }
