--- a/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/integration-tests/emulated/tests/bridges/bridge-hub-rococo/Cargo.toml
@@ -14,7 +14,6 @@ workspace = true
 codec = { workspace = true }
 hex-literal = { workspace = true, default-features = true }
 scale-info = { features = ["derive"], workspace = true }
-<<<<<<< HEAD
 frame-support.workspace = true
 pallet-asset-conversion.workspace = true
 pallet-assets.workspace = true
@@ -25,9 +24,12 @@ sp-core.workspace = true
 sp-runtime.workspace = true
 pallet-xcm.workspace = true
 xcm.workspace = true
+xcm-builder.workspace = true
 xcm-executor.workspace = true
 xcm-runtime-apis.workspace = true
+bp-asset-hub-rococo.workspace = true
 pallet-bridge-messages.workspace = true
+asset-hub-rococo-runtime.workspace = true
 cumulus-pallet-xcmp-queue.workspace = true
 emulated-integration-tests-common.workspace = true
 parachains-common.workspace = true
@@ -36,50 +38,9 @@ rococo-system-emulated-network.workspace = true
 rococo-westend-system-emulated-network.workspace = true
 testnet-parachains-constants = { features = ["rococo", "westend"], workspace = true, default-features = true }
 snowbridge-core.workspace = true
+snowbridge-inbound-queue-primitives.workspace = true
+snowbridge-outbound-queue-primitives.workspace = true
 snowbridge-pallet-inbound-queue-fixtures.workspace = true
 snowbridge-pallet-inbound-queue-fixtures.default-features = true
 snowbridge-pallet-outbound-queue.workspace = true
 snowbridge-pallet-system.workspace = true
-snowbridge-router-primitives.workspace = true
-=======
-
-# Substrate
-frame-support = { workspace = true }
-pallet-asset-conversion = { workspace = true }
-pallet-assets = { workspace = true }
-pallet-balances = { workspace = true }
-pallet-message-queue = { workspace = true, default-features = true }
-sp-core = { workspace = true }
-sp-runtime = { workspace = true }
-
-# Polkadot
-pallet-xcm = { workspace = true }
-xcm = { workspace = true }
-xcm-builder = { workspace = true }
-xcm-executor = { workspace = true }
-xcm-runtime-apis = { workspace = true }
-
-# Bridges
-bp-asset-hub-rococo = { workspace = true }
-pallet-bridge-messages = { workspace = true }
-
-# Cumulus
-asset-hub-rococo-runtime = { workspace = true }
-cumulus-pallet-xcmp-queue = { workspace = true }
-emulated-integration-tests-common = { workspace = true }
-parachains-common = { workspace = true, default-features = true }
-rococo-system-emulated-network = { workspace = true }
-rococo-westend-system-emulated-network = { workspace = true }
-testnet-parachains-constants = { features = [
-	"rococo",
-	"westend",
-], workspace = true, default-features = true }
-
-# Snowbridge
-snowbridge-core = { workspace = true }
-snowbridge-inbound-queue-primitives = { workspace = true }
-snowbridge-outbound-queue-primitives = { workspace = true }
-snowbridge-pallet-inbound-queue-fixtures = { workspace = true, default-features = true }
-snowbridge-pallet-outbound-queue = { workspace = true }
-snowbridge-pallet-system = { workspace = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
