--- a/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
+++ b/cumulus/parachains/runtimes/assets/asset-hub-westend/Cargo.toml
@@ -25,7 +25,6 @@ frame-system.workspace = true
 frame-system-benchmarking = { optional = true, workspace = true }
 frame-system-rpc-runtime-api.workspace = true
 frame-try-runtime = { optional = true, workspace = true }
-<<<<<<< HEAD
 pallet-asset-conversion.workspace = true
 pallet-asset-conversion-ops.workspace = true
 pallet-asset-conversion-tx-payment.workspace = true
@@ -55,6 +54,7 @@ sp-consensus-aura.workspace = true
 sp-core.workspace = true
 sp-genesis-builder.workspace = true
 sp-inherents.workspace = true
+sp-io.workspace = true
 sp-keyring.workspace = true
 sp-offchain.workspace = true
 sp-runtime.workspace = true
@@ -67,56 +67,6 @@ sp-version.workspace = true
 # num-traits feature needed for dex integer sq root:
 primitive-types = { features = ["codec", "num-traits", "scale-info"], workspace = true }
 pallet-xcm.workspace = true
-=======
-pallet-asset-conversion = { workspace = true }
-pallet-asset-conversion-ops = { workspace = true }
-pallet-asset-conversion-tx-payment = { workspace = true }
-pallet-asset-rewards = { workspace = true }
-pallet-assets = { workspace = true }
-pallet-assets-freezer = { workspace = true }
-pallet-aura = { workspace = true }
-pallet-authorship = { workspace = true }
-pallet-balances = { workspace = true }
-pallet-migrations = { workspace = true }
-pallet-multisig = { workspace = true }
-pallet-nft-fractionalization = { workspace = true }
-pallet-nfts = { workspace = true }
-pallet-nfts-runtime-api = { workspace = true }
-pallet-proxy = { workspace = true }
-pallet-revive = { workspace = true }
-pallet-session = { workspace = true }
-pallet-state-trie-migration = { workspace = true }
-pallet-timestamp = { workspace = true }
-pallet-transaction-payment = { workspace = true }
-pallet-transaction-payment-rpc-runtime-api = { workspace = true }
-pallet-uniques = { workspace = true }
-pallet-utility = { workspace = true }
-sp-api = { workspace = true }
-sp-block-builder = { workspace = true }
-sp-consensus-aura = { workspace = true }
-sp-core = { workspace = true }
-sp-genesis-builder = { workspace = true }
-sp-inherents = { workspace = true }
-sp-io = { workspace = true }
-sp-keyring = { workspace = true }
-sp-offchain = { workspace = true }
-sp-runtime = { workspace = true }
-sp-session = { workspace = true }
-sp-std = { workspace = true }
-sp-storage = { workspace = true }
-sp-transaction-pool = { workspace = true }
-sp-version = { workspace = true }
-
-# num-traits feature needed for dex integer sq root:
-primitive-types = { features = [
-	"codec",
-	"num-traits",
-	"scale-info",
-], workspace = true }
-
-# Polkadot
-pallet-xcm = { workspace = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
 pallet-xcm-benchmarks = { optional = true, workspace = true }
 polkadot-parachain-primitives.workspace = true
 polkadot-runtime-common.workspace = true
@@ -140,26 +90,15 @@ pallet-message-queue.workspace = true
 parachain-info.workspace = true
 parachains-common.workspace = true
 testnet-parachains-constants = { features = ["westend"], workspace = true }
-<<<<<<< HEAD
 bp-asset-hub-rococo.workspace = true
 bp-asset-hub-westend.workspace = true
 bp-bridge-hub-rococo.workspace = true
 bp-bridge-hub-westend.workspace = true
 pallet-xcm-bridge-hub-router.workspace = true
-snowbridge-router-primitives.workspace = true
-=======
-
-# Bridges
-bp-asset-hub-rococo = { workspace = true }
-bp-asset-hub-westend = { workspace = true }
-bp-bridge-hub-rococo = { workspace = true }
-bp-bridge-hub-westend = { workspace = true }
-pallet-xcm-bridge-hub-router = { workspace = true }
-snowbridge-inbound-queue-primitives = { workspace = true }
-snowbridge-outbound-queue-primitives = { workspace = true }
-snowbridge-pallet-system-frontend = { workspace = true }
-snowbridge-runtime-common = { workspace = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
+snowbridge-inbound-queue-primitives.workspace = true
+snowbridge-outbound-queue-primitives.workspace = true
+snowbridge-pallet-system-frontend.workspace = true
+snowbridge-runtime-common.workspace = true
 
 [dev-dependencies]
 asset-test-utils = { default-features = true, path = "../test-utils" }
