--- a/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo/Cargo.toml
+++ b/cumulus/parachains/runtimes/bridge-hubs/bridge-hub-rococo/Cargo.toml
@@ -78,7 +78,6 @@ pallet-collator-selection.workspace = true
 parachain-info.workspace = true
 parachains-common.workspace = true
 testnet-parachains-constants = { features = ["rococo"], workspace = true }
-<<<<<<< HEAD
 bp-asset-hub-rococo.workspace = true
 bp-asset-hub-westend.workspace = true
 bp-bridge-hub-rococo.workspace = true
@@ -101,12 +100,14 @@ pallet-bridge-relayers.workspace = true
 pallet-xcm-bridge-hub.workspace = true
 snowbridge-beacon-primitives.workspace = true
 snowbridge-core.workspace = true
+snowbridge-inbound-queue-primitives.workspace = true
+snowbridge-merkle-tree.workspace = true
+snowbridge-outbound-queue-primitives.workspace = true
 snowbridge-outbound-queue-runtime-api.workspace = true
 snowbridge-pallet-ethereum-client.workspace = true
 snowbridge-pallet-inbound-queue.workspace = true
 snowbridge-pallet-outbound-queue.workspace = true
 snowbridge-pallet-system.workspace = true
-snowbridge-router-primitives.workspace = true
 snowbridge-runtime-common.workspace = true
 snowbridge-system-runtime-api.workspace = true
 bridge-hub-common.workspace = true
@@ -117,55 +118,6 @@ bridge-runtime-common = { features = ["integrity-test"], default-features = true
 pallet-bridge-relayers = { features = ["integrity-test"], path = "../../../../../bridges/modules/relayers", default-features = false }
 parachains-runtimes-test-utils = { default-features = true, path = "../../test-utils" }
 snowbridge-runtime-test-common = { default-features = true, path = "../../../../../bridges/snowbridge/runtime/test-common" }
-=======
-
-# Bridges
-bp-asset-hub-rococo = { workspace = true }
-bp-asset-hub-westend = { workspace = true }
-bp-bridge-hub-rococo = { workspace = true }
-bp-bridge-hub-westend = { workspace = true }
-bp-header-chain = { workspace = true }
-bp-messages = { workspace = true }
-bp-parachains = { workspace = true }
-bp-polkadot-bulletin = { workspace = true }
-bp-polkadot-core = { workspace = true }
-bp-relayers = { workspace = true }
-bp-rococo = { workspace = true }
-bp-runtime = { workspace = true }
-bp-westend = { workspace = true }
-bp-xcm-bridge-hub-router = { workspace = true }
-bridge-runtime-common = { workspace = true }
-pallet-bridge-grandpa = { workspace = true }
-pallet-bridge-messages = { workspace = true }
-pallet-bridge-parachains = { workspace = true }
-pallet-bridge-relayers = { workspace = true }
-pallet-xcm-bridge-hub = { workspace = true }
-
-# Ethereum Bridge (Snowbridge)
-snowbridge-beacon-primitives = { workspace = true }
-snowbridge-core = { workspace = true }
-snowbridge-inbound-queue-primitives = { workspace = true }
-snowbridge-merkle-tree = { workspace = true }
-snowbridge-outbound-queue-primitives = { workspace = true }
-snowbridge-outbound-queue-runtime-api = { workspace = true }
-snowbridge-pallet-ethereum-client = { workspace = true }
-snowbridge-pallet-inbound-queue = { workspace = true }
-snowbridge-pallet-outbound-queue = { workspace = true }
-snowbridge-pallet-system = { workspace = true }
-snowbridge-runtime-common = { workspace = true }
-snowbridge-system-runtime-api = { workspace = true }
-
-bridge-hub-common = { workspace = true }
-
-[dev-dependencies]
-bridge-hub-test-utils = { workspace = true, default-features = true }
-bridge-runtime-common = { features = [
-	"integrity-test",
-], workspace = true, default-features = true }
-pallet-bridge-relayers = { features = ["integrity-test"], workspace = true }
-parachains-runtimes-test-utils = { workspace = true, default-features = true }
-snowbridge-runtime-test-common = { workspace = true, default-features = true }
->>>>>>> 98c6ffce (Snowbridge V2 (#7402))
 
 [features]
 default = ["std"]
