pallet-bounties: improves bench setup and batch limit control and tests if approve_bounty respects spend max_total

--- a/substrate/frame/bounties/Cargo.toml
+++ b/substrate/frame/bounties/Cargo.toml
@@ -30,6 +30,7 @@ sp-io = { workspace = true }
 sp-runtime = { workspace = true }
 
 [dev-dependencies]
+pallet-utility = { workspace = true, default-features = true }
 pallet-balances = { workspace = true, default-features = true }
 
 [features]
