--- a/Cargo.toml
+++ b/Cargo.toml
@@ -614,7 +614,7 @@ ark-bls12-381-ext = { version = "0.4.1", default-features = false }
 ark-bw6-761 = { version = "0.4.0", default-features = false }
 ark-bw6-761-ext = { version = "0.4.1", default-features = false }
 ark-ec = { version = "0.4.2", default-features = false }
-ark-ec-vrfs = { version = "0.1.2", default-features = false }
+ark-vrf = { version = "0.1.0", default-features = false }
 ark-ed-on-bls12-377 = { version = "0.4.0", default-features = false }
 ark-ed-on-bls12-377-ext = { version = "0.4.1", default-features = false }
 ark-ed-on-bls12-381-bandersnatch = { version = "0.4.0", default-features = false }
@@ -1432,7 +1432,7 @@ overflow-checks = true
 #
 # This list is ordered alphabetically.
 [profile.dev.package]
-ark-ec-vrfs = { opt-level = 3 }
+ark-vrf = { opt-level = 3 }
 blake2 = { opt-level = 3 }
 blake2b_simd = { opt-level = 3 }
 chacha20poly1305 = { opt-level = 3 }
