Bridges: Add initial primitives for AssetHub bridging (#8063)
This resolves TODO no. 1:
https://github.com/paritytech/parity-bridges-common/issues/3136#issue-2913441160

To add cli support to substrate-relay as described in above issue, 
necessary changes from
[this](https://github.com/paritytech/polkadot-sdk/pull/6675) PR are
added by this PR.

Specifically below changes and any other supportive changes.

```
// bridges/chains/chain-asset-hub-rococo/src/lib.rs
impl Chain for AssetHubRococo {..}
impl Parachain for AssetHubRococo {..}
```

```
// bridges/chains/chain-asset-hub-westend/src/lib.rs
impl Chain for AssetHubWestend {..}
impl Parachain for AssetHubWestend {..}
```

---------

Co-authored-by: Branislav Kontur <bkontur@gmail.com>
Co-authored-by: cmd[bot] <41898282+github-actions[bot]@users.noreply.github.com>

--- a/bridges/chains/chain-asset-hub-westend/Cargo.toml
+++ b/bridges/chains/chain-asset-hub-westend/Cargo.toml
@@ -22,6 +22,9 @@ frame-support = { workspace = true }
 sp-core = { workspace = true }
 
 # Bridge Dependencies
+bp-bridge-hub-cumulus = { workspace = true }
+bp-messages = { workspace = true }
+bp-runtime = { workspace = true }
 bp-xcm-bridge-hub-router = { workspace = true }
 testnet-parachains-constants = { features = ["westend"], workspace = true }
 
@@ -31,6 +34,9 @@ xcm = { workspace = true }
 [features]
 default = ["std"]
 std = [
+	"bp-bridge-hub-cumulus/std",
+	"bp-messages/std",
+	"bp-runtime/std",
 	"bp-xcm-bridge-hub-router/std",
 	"codec/std",
 	"frame-support/std",
